cluster/appstore-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appstore-api
  labels:
    app: appstore-api
spec:
  replicas: 12
  selector:
    matchLabels:
      app: appstore-api
  template:
    metadata:
      labels:
        app: appstore-api
    spec:
      containers:
        - name: appstore-api
          image: gcr.io/pebble-rebirth/appstore-api:gcf061e3
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 224Mi
            requests:
              cpu: 100m
              memory: 192Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: appstore-api
spec:
  selector:
    app: appstore-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
