cluster/asr-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asr-test
  labels:
    app: asr-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: asr-test
  template:
    metadata:
      labels:
        app: asr-test
    spec:
      serviceAccountName: rebble-asr-sa
      containers:
        - name: asr-test
          image: gcr.io/pebble-rebirth/asr:g255d87c
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: asr-test
spec:
  selector:
    app: asr-test
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
