cluster/bobby-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bobby
  labels:
    app: bobby
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bobby
  template:
    metadata:
      labels:
        app: bobby
    spec:
      serviceAccountName: bobby-sa
      containers:
        - name: bobby
          image: ghcr.io/pebble-dev/bobby-assistant:g142d92b
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 96Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: bobby
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8080": "bobby-backend-config"}}'
spec:
  selector:
    app: bobby
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
