cluster/boot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot
  labels:
    app: boot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boot
  template:
    metadata:
      labels:
        app: boot
    spec:
      containers:
        - name: boot
          image: gcr.io/pebble-rebirth/boot:g0ba1d4d
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 96Mi
            requests:
              cpu: 20m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: boot
spec:
  selector:
    app: boot
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
