cluster/cluster-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-dashboard
  labels:
    app: cluster-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cluster-dashboard
  template:
    metadata:
      labels:
        app: cluster-dashboard
    spec:
      serviceAccountName: cluster-dashboard-sa
      containers:
        - name: cluster-dashboard
          image: gcr.io/pebble-rebirth/cluster-dashboard:g10bdcf8
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 300m
              memory: 140Mi
            requests:
              cpu: 50m
              memory: 96Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-dashboard
spec:
  selector:
    app: cluster-dashboard
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
