cluster/cohorts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cohorts
  labels:
    app: cohorts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cohorts
  template:
    metadata:
      labels:
        app: cohorts
    spec:
      containers:
        - name: cohorts
#          image: gcr.io/pebble-rebirth/cohorts:g63020ab
          image: gcr.io/pebble-rebirth/cohorts:g2fccaaf
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 150m
              memory: 192Mi
            requests:
              cpu: 50m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: cohorts
spec:
  selector:
    app: cohorts
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
