cluster/developer-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developer-api
  labels:
    app: developer-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: developer-api
  template:
    metadata:
      labels:
        app: developer-api
    spec:
      containers:
        - name: developer-api
          image: gcr.io/pebble-rebirth/developer-api:g7627716
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 96Mi
            requests:
              cpu: 20m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: developer-api
spec:
  selector:
    app: developer-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
