cluster/discourse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discourse
  labels:
    app: discourse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discourse
  template:
    metadata:
      labels:
        app: discourse
    spec:
      volumes:
        - name: discourse-vol
          persistentVolumeClaim:
            claimName: discourse
      containers:
        - name: discourse
          image: discourse/discourse:2026.7.2
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/shared"
              name: discourse-vol
          resources:
            limits:
              cpu: 750m
              memory: 2048Mi
            requests:
              cpu: 200m
              memory: 1532Mi

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 1800
            periodSeconds: 30
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 1800
            periodSeconds: 30
            timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: discourse
spec:
  selector:
    app: discourse
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
