cluster/notif-app-icons.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notif-app-icons
  labels:
    app: notif-app-icons
spec:
  replicas: 4
  selector:
    matchLabels:
      app: notif-app-icons
  template:
    metadata:
      labels:
        app: notif-app-icons
    spec:
      containers:
        - name: notif-app-icons
          image: gcr.io/pebble-rebirth/notif-app-icons:g4682347
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 200m
              memory: 96Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: notif-app-icons
spec:
  selector:
    app: notif-app-icons
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
