cluster/timeline-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeline-sync
  labels:
    app: timeline-sync
spec:
  replicas: 8
  selector:
    matchLabels:
      app: timeline-sync
  template:
    metadata:
      labels:
        app: timeline-sync
    spec:
      containers:
        - name: timeline-sync
          image: gcr.io/pebble-rebirth/timeline-sync:gc8e909a
          ports:
            - containerPort: 8080
          resources:
            # timeline-sync needs surprising amounts of CPU due to the spikes on the minute,
            # which get smoothed out by GCP resource usage graphs.
            limits:
              cpu: 150m
              memory: 96Mi
            requests:
              cpu: 150m
              memory: 80Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: timeline-sync
spec:
  selector:
    app: timeline-sync
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
