cluster/treasure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: treasure
  labels:
    app: treasure
spec:
  replicas: 2
  selector:
    matchLabels:
      app: treasure
  template:
    metadata:
      labels:
        app: treasure
    spec:
      volumes:
        - name: "svc-analytics-key"
          secret:
            secretName: "svc-analytics-key"
      containers:
        - name: treasure
          image: gcr.io/pebble-rebirth/treasure:g386b406
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: "svc-analytics-key"
              mountPath: "/var/run/secret/cloud.google.com"
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: treasure
spec:
  selector:
    app: treasure
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
