cluster/user-identifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-identifier
  labels:
    app: user-identifier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-identifier
  template:
    metadata:
      labels:
        app: user-identifier
    spec:
      containers:
        - name: user-identifier
          image: gcr.io/pebble-rebirth/user-identifier:gec2ae9b
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 96Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: user-identifier
spec:
  selector:
    app: user-identifier
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
