cluster/weather-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-v2
  labels:
    app: weather-v2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: weather-v2
  template:
    metadata:
      labels:
        app: weather-v2
        provider-of: weather
    spec:
      containers:
        - name: weather-v2
          image: gcr.io/pebble-rebirth/weather:gd051690
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 96Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: weather-v2
spec:
  selector:
    app: weather-v2
    provider-of: weather
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
