cluster/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($host = "forums.rebble.io") { rewrite / $scheme://forum.rebble.io$uri permanent; }
spec:
  tls:
    - secretName: star-rebble-io
      hosts:
        - "*.rebble.io"
  rules:
    - host: "forums.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discourse
                port:
                  number: 80
    - host: "android-appstore-api.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appstore-api
                port:
                  number: 8080
    - host: android-timeline-sync.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeline-sync
                port:
                  number: 8080
    - host: android-timeline-api.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeline-sync
                port:
                  number: 8080

    - host: timeline-sync.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeline-sync
                port:
                  number: 8080
    - host: timeline-api.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeline-sync
                port:
                  number: 8080
    - host: "appstore-api.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appstore-api
                port:
                  number: 8080
