cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rebble-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: rebble-ingress-ipv4
spec:
  tls:
    - secretName: star-rebble-io
    - secretName: star-asr-rebble-io
      hosts:
        - "*.asr.rebble.io"
    - secretName: star-asr-test-rebble-io
      hosts:
        - "*.asr-test.rebble.io"
  rules:
    - host: rws-status.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-dashboard
                port:
                  number: 8080
    - host: cohorts.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cohorts
                port:
                  number: 8080
    - host: boot.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boot
                port:
                  number: 8080
    - host: auth.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
    - host: timeline-sync.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeline-sync
                port:
                  number: 8080
    - host: timeline-api.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeline-sync
                port:
                  number: 8080
    - host: "*.asr.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: asr
                port:
                  number: 8080
    - host: "*.asr-test.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: asr-test
                port:
                  number: 8080
    - host: "lp.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lp
                port:
                  number: 8080
    - host: "weather.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-v2
                port:
                  number: 8080
    - host: "weather-v2.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-v2
                port:
                  number: 8080
    - host: "notif-app-icons.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notif-app-icons
                port:
                  number: 8080
    - host: "appstore-api.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appstore-api
                port:
                  number: 8080
    - host: "ios-appstore-api.rebble.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appstore-api
                port:
                  number: 8080
    - host: treasure.rebble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: treasure
                port:
                  number: 8080
    - host: dev-ws-proxy.rebble.io
      http:
        paths:
        - backend:
            service:
              name: ws-proxy
              port:
                number: 8080
          path: /
          pathType: Prefix
    - host: assets2.rebble.io
      http:
        paths:
        - backend:
            service:
              name: assets2
              port:
                number: 8080
          path: /
          pathType: Prefix
    - host: assets.rebble.io
      http:
        paths:
        - backend:
            service:
              name: assets2
              port:
                number: 8080
          path: /
          pathType: Prefix
    - host: www.rebble.io
      http:
        paths:
        - backend:
            service:
              name: www-redirect
              port:
                number: 8080
          path: /
          pathType: Prefix
    - host: apps.rebble.io
      http:
        paths:
        - backend:
            service:
              name: appstore-legacy
              port:
                number: 8080
          path: /
          pathType: Prefix
    - host: dev-portal.rebble.io
      http:
        paths:
        - backend:
            service:
              name: dev-portal
              port:
                number: 8082
          path: /
          pathType: Prefix
    - host: bobby-api.rebble.io
      http:
        paths:
        - backend:
            service:
              name: bobby
              port:
                number: 8080
          path: /
          pathType: Prefix
    - host: audio-debug.rebble.io
      http:
        paths:
        - backend:
            service:
              name: audio-debug
              port:
                number: 8000
          path: /
          pathType: Prefix
    - host: forum.rebble.io
      http:
        paths:
        - backend:
            service:
              name: discourse
              port:
                number: 80
          path: /
          pathType: Prefix
